Added error checking for blank names

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,7 @@
-<% if @name %>
-	Welcome <%= @name %>
+<% if @name.empty? %>
+	<p>Please input a name</p>
+<% elsif @name %>
+  Welcome <%= @name %>
 <% else %>
 	<a href ='/register' >New Game</a>
 <% end %>
