--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,4 +1,10 @@
+<!DOCTYPE>
 <html>
+	<head>
+		<meta charset='UTF-8' />
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+		<title>Battleships</title>
+	</head>
   <body>
     <%= yield %>
   </body>
