--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,8 @@
 		<title>Battleships</title>
 	</head>
   <body>
-    <%= yield %>
+    <div class="container" style="padding: 20px;">
+      <%= yield %>
+    </div>
   </body>
 </html>
