--- a/views/register.erb
+++ b/views/register.erb
@@ -1,6 +1,8 @@
-<div>
-  <form action = "/" method="get">
-    <input type = "text" name = "name">
-    <input type = "submit" value = "Register">
+<div class="jumbotron">
+  <h2>Start a new game:</h2>
+  <form action = "/" method="get" class="form-group">
+    <label>Name:</label>
+    <input type = "text" name = "name" width="40">
+    <input type = "submit" class="btn btn-success" value = "Register" >
   </form>
 </div>
