--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,11 @@
   </div>
 <% elsif @name %>
   	<h1>Welcome <%= @name %></h1>
+  	<% if @game.ready? %>
+  	Woohoo
+  	<% else %>
+  	Please enter another name
+  	<% end %>
 <% else %>
   <h1>Welcome to Battleships!</h1>
 	<a href ='/register' ><button class="btn btn-primary">New Game</button></a>
