--- a/views/ship_placement.erb
+++ b/views/ship_placement.erb
@@ -1,1 +1,7 @@
 <p>Player 1 has been assigned to <%= @player.name %></p>
+
+<form action="/" method="get">
+  <label>Ship</label>
+  <input type="text" name="ship">
+  <input type="submit" value="Place">
+</form>
