Being able to place a ship (needs functionality adding)

--- a/views/ship_placement.erb
+++ b/views/ship_placement.erb
@@ -1,7 +1,7 @@
-<p>Player 1 has been assigned to <%= @player.name %></p>
-
-<form action="/" method="get">
+<form action="/ship_placement" method="post">
   <label>Ship</label>
   <input type="text" name="ship">
   <input type="submit" value="Place">
 </form>
+
+Battleship placed
