Added coords and orientation inputs for ships

--- a/views/registered.erb
+++ b/views/registered.erb
@@ -1,1 +1,3 @@
 <p>Player 1 has been assigned to <%= @player.name %></p>
+<a href ='/ship_placement' ><button class="btn btn-primary">Place ships!</button></a>
+
