--- a/views/ship_placement.erb
+++ b/views/ship_placement.erb
@@ -4,8 +4,8 @@
     <label>Aircraft Carrier: </label>
     <input type="text" name="ac_coord">
     <select name="ac_orientation">
-      <option value="vertical">Vertical</option>
-      <option value="horizontal">Horizontal</option>
+      <option value="vertically">vertically</option>
+      <option value="horizontally">horizontally</option>
     </select>
   </div>
 
@@ -13,8 +13,8 @@
     <label>Battleship: </label>
     <input type="text" name="bs_coord">
     <select name="bs_orientation">
-      <option value="vertical">Vertical</option>
-      <option value="horizontal">Horizontal</option>
+      <option value="vertically">vertically</option>
+      <option value="horizontally">horizontally</option>
     </select>
   </div>
 
@@ -22,8 +22,8 @@
     <label>Destroyer: </label>
     <input type="text" name="d_coord">
     <select name="d_orientation">
-      <option value="vertical">Vertical</option>
-      <option value="horizontal">Horizontal</option>
+      <option value="vertically">vertically</option>
+      <option value="horizontally">horizontally</option>
     </select>
   </div>
 
@@ -31,8 +31,8 @@
     <label>Submarine: </label>
     <input type="text" name="s_coord">
     <select name="s_orientation">
-      <option value="vertical">Vertical</option>
-      <option value="horizontal">Horizontal</option>
+      <option value="vertically">vertically</option>
+      <option value="horizontally">horizontally</option>
     </select>
   </div>
 
@@ -40,8 +40,8 @@
     <label>Patrol boat: </label>
     <input type="text" name="pb_coord">
     <select name="pb_orientation">
-      <option value="vertical">Vertical</option>
-      <option value="horizontal">Horizontal</option>
+      <option value="vertically">vertically</option>
+      <option value="horizontally">horizontally</option>
     </select>
   </div>
   
