Started implementing player board layout

--- a/views/game_page.erb
+++ b/views/game_page.erb
@@ -15,3 +15,10 @@
 <% if @patrol_boat %>
 	Patrol Boat placed
 <% end %>
+
+<table class="table-bordered" id="game-table">
+  <tr id="table-row">
+    <td id="table-cell">ABC</td>
+    <td id="table-cell">DEF</td>
+  </tr>
+</table>
