Started to write custom web steps

--- a/views/game_page.erb
+++ b/views/game_page.erb
@@ -16,9 +16,23 @@
 	Patrol Boat placed
 <% end %>
 
-<table class="table-bordered" id="game-table">
-  <tr id="table-row">
-    <td id="table-cell">ABC</td>
-    <td id="table-cell">DEF</td>
-  </tr>
-</table>
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
+ship
