--- a/views/game_page.erb
+++ b/views/game_page.erb
@@ -1,19 +1,7 @@
 <h1>Game Page</h1>
 
-<% if @aircraft_carrier %>
-	Aircraft Carrier placed
-<% end %>
-<% if @battleship %>
-	Battleship placed
-<% end %>
-<% if @destroyer %>
-	Destroyer placed
-<% end %>
-<% if @submarine %>
-	Submarine placed
-<% end %>
-<% if @patrol_boat %>
-	Patrol Boat placed
+<% if @board.ship_count == 5 %>
+	Ships placed
 <% end %>
 
 ship
