--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset='UTF-8' />
 		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/stylesheets/grid.css" rel="stylesheet">
 		<title>Battleships</title>
 	</head>
   <body>
